--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,11 @@
     "roboto-fontface": "*",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
-    "vuetify": "^1.5.5"
+    "vuetify": "^1.5.5",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
     "@vue/cli-plugin-eslint": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
     "@vue/eslint-config-standard": "^4.0.0",
