--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -2,6 +2,7 @@
 FROM python:3.7-alpine
 
 COPY backend /app
+COPY parser /app/parser
 WORKDIR /app
 EXPOSE 80
 
@@ -12,6 +13,8 @@ RUN set -ex \
 		libc-dev \
 		musl-dev \
 		libffi-dev \
+		mariadb-dev \
+	&& apk add --no-cache mariadb-connector-c \
 	&& pip install --no-cache-dir pipenv \
 	&& pipenv install --system --clear \
 	&& apk del .build-deps \
