--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,8 @@ django = "*"
 djangorestframework = "*"
 markdown = "*"
 djangorestframework-simplejwt = "*"
+gunicorn = "*"
+mysqlclient = "*"
 
 [requires]
 python_version = "3.7"
