--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,13 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	}
 
+	location /django-static {
+		proxy_pass  http://perktree-backend;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	}
+
 	location / {
 		root /app;
 		try_files $uri $uri/ /index.html;
