--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
     "vuetify": "^1.5.5",
+    "vuetify-upload-button": "^1.2.2",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
