Change db backend to postgres

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -11,7 +11,7 @@ djangorestframework = "*"
 markdown = "*"
 djangorestframework-simplejwt = "*"
 gunicorn = "*"
-mysqlclient = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
