Add raven to frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "d3.chart.sankey": "^0.4.0",
     "lodash": "^4.17.11",
     "material-design-icons-iconfont": "^3.0.3",
+    "raven-js": "^3.27.0",
     "roboto-fontface": "*",
     "vue": "^2.6.6",
     "vue-router": "^3.0.2",
