--- a/nginx.conf
+++ b/nginx.conf
@@ -3,14 +3,7 @@ server {
 	server_name _;
 	client_max_body_size 5M;
 
-	location /api/ {
-		proxy_pass  http://perktree-backend;
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	}
-
-	location /django-static {
+	location ~ ^/(api|django-static|admin) {
 		proxy_pass  http://perktree-backend;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
