--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -6,12 +6,14 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "*"
-djangorestframework = "*"
-markdown = "*"
-djangorestframework-simplejwt = "*"
-gunicorn = "*"
-psycopg2-binary = "*"
+django = "==2.2.10"
+djangorestframework = "==3.10.2"
+djangorestframework-simplejwt = "==4.3.0"
+gunicorn = "==19.9.0"
+markdown = "==3.1.1"
+psycopg2-binary = "==2.8.6"
+pyjwt = "==1.7.1"
+uwsgi = "==2.0.30"
 
 [requires]
-python_version = "3.7"
+python_version = "3.9"
